--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -620,7 +620,7 @@
                     <h1 itemprop="headline" class="js-headline">Andrés Trapiello: "Pasear por el Rastro es una cura de humildad"</h1>
                     <div class="kicker">
                         <h2>
-                            <a href="/cultura.html">CULTURA</a>
+                            <a href="/cultura.html">CULTURA BALEARES</a>
                         </h2>
                         {{>tooltip-trust1 }}
                     </div>
