--- a/src/assets/mobile.html
+++ b/src/assets/mobile.html
@@ -1328,8 +1328,8 @@
         <div class="titles ">
             <h1 itemprop="headline " class="js-headline ">Andrés Trapiello: "Pasear por el Rastro es una cura de humildad "</h1> 
             <div class="kicker ">
-                    <h2><a href="/cultura.html ">CULTURA</a></h2>
-                    {{>tooltip-trust}}
+                    <h2><a href="/cultura.html ">CULTURA BALEARES PALMA</a></h2>
+                    {{>tooltip-trust1}}
 
             </div>
         </div>
