--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -622,7 +622,7 @@
                         <h2>
                             <a href="/cultura.html">CULTURA BALEARES</a>
                         </h2>
-                        {{>tooltip-trust1 }}
+                        {{>tooltip-trust }}
                     </div>
                 </div>
                 <div class="row content sharing-tools">
