--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -624,7 +624,20 @@
                         </h2>
                         {{>tooltip-trust }}
                     </div>
+                    <div class="kicker">
+                        <h2>
+                            <a href="/cultura.html">CULTURA BALEARES</a>
+                        </h2>
+                        {{>tooltip-trust2 }}
+                    </div>
                 </div>
+                <style>
+                .news-item .titles .kicker {
+                    float: none;
+                    position: static;
+                    top: 0;
+                }
+                </style>
                 <div class="row content sharing-tools">
                     <ul>
                         <li class="signatures-container">
