--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -624,12 +624,12 @@
                         </h2>
                         {{>tooltip-trust }}
                     </div>
-                    <div class="kicker">
+                    <!-- <div class="kicker">
                         <h2>
                             <a href="/cultura.html">CULTURA BALEARES</a>
                         </h2>
                         {{>tooltip-trust2 }}
-                    </div>
+                    </div> -->
                 </div>
                 <style>
                 .news-item .titles .kicker {
@@ -1429,7 +1429,7 @@ More info available at http://www.omniture.com -->
     <!-- DO NOT MODIFY -->
     <!-- End Facebook Pixel Code -->
 
-<script src="main.js"></script>
+<script src="main2.js"></script>
 </body>
 
 </html>
