--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -617,6 +617,9 @@
                     
                 </span>
                 {{>tooltip-trust }}
+                {{>tooltip-trust2 }}
+                {{>tooltip-trust3 }}
+                {{>tooltip-trust4 }}
                 <div class="titles">
                     <h1 itemprop="headline" class="js-headline">Andrés Trapiello: "Pasear por el Rastro es una cura de humildad"</h1>
                     <div class="kicker">
@@ -624,12 +627,6 @@
                             <a href="/cultura.html">CULTURA BALEARES</a>
                         </h2>
                     </div>
-                    <!-- <div class="kicker">
-                        <h2>
-                            <a href="/cultura.html">CULTURA BALEARES</a>
-                        </h2>
-                        {{>tooltip-trust2 }}
-                    </div> -->
                 </div>
                 <style>
                 .news-item .titles .kicker {
@@ -1429,7 +1426,7 @@ More info available at http://www.omniture.com -->
     <!-- DO NOT MODIFY -->
     <!-- End Facebook Pixel Code -->
 
-<script src="main2.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
