posicionando los tooltips

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -620,6 +620,7 @@
                 {{>tooltip-trust2 }}
                 {{>tooltip-trust3 }}
                 {{>tooltip-trust4 }}
+                {{>tooltip-trust5 }}
                 <div class="titles">
                     <h1 itemprop="headline" class="js-headline">Andrés Trapiello: "Pasear por el Rastro es una cura de humildad"</h1>
                     <div class="kicker">
