--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -617,10 +617,10 @@
                     
                 </span>
                 {{>tooltip-trust }}
-                {{>tooltip-trust2 }}
+                <!-- {{>tooltip-trust2 }}
                 {{>tooltip-trust3 }}
-                {{>tooltip-trust4 }}
-                {{>tooltip-trust5 }}
+                {{>tooltip-trust4 }} -->
+                <!-- {{>tooltip-trust5 }} -->
                 <div class="titles">
                     <h1 itemprop="headline" class="js-headline">Andrés Trapiello: "Pasear por el Rastro es una cura de humildad"</h1>
                     <div class="kicker">
