--- a/src/assets/mobile.html
+++ b/src/assets/mobile.html
@@ -1329,7 +1329,7 @@
             <h1 itemprop="headline " class="js-headline ">Andrés Trapiello: "Pasear por el Rastro es una cura de humildad "</h1> 
             <div class="kicker ">
                     <h2><a href="/cultura.html ">COMUNITAT COMUNITAT </a></h2>
-                    {{>tooltip-trust}}
+                    {{>tooltip-trust-bottom}}
 
             </div>
         </div>
