--- a/src/assets/mobile.html
+++ b/src/assets/mobile.html
@@ -1360,8 +1360,7 @@
         <div class="titles ">
             <h1 itemprop="headline " class="js-headline ">Marín Civera y Luis Abad, "dos filósofos adelantados a su tiempo ", según Fernando Savater</h1>                
             <div class="kicker ">
-                    <h2><a href="/cultura.html ">MADRID</a></h2>
-                   
+                    <h2><a href="/cultura.html "></a></h2>
                     {{>tooltip-trust-bottom}}
             </div>
         </div>
