posicionado si no cabe

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -628,6 +628,9 @@
                             <a href="/cultura.html">CULTURA BALEARES</a>
                         </h2>
                         {{>tooltip-trust }}
+                        {{>tooltip-trust2 }}
+                        {{>tooltip-trust3 }}
+                        {{>tooltip-trust4 }}
                     </div>
                 </div>
                 <style>
