mediaquery mobile izquierda

--- a/src/assets/mobile.html
+++ b/src/assets/mobile.html
@@ -1312,40 +1312,6 @@
     
                     <main role="main " class="main news js_navContinua " data-ue-contenido=" " id="js_5bd1e93f268e3e560d8b45cf ">
 	    
-        <script>
-            var ueDataPage = {
-                rootSection: "default ",
-                classContNav: " ",
-                sectionPrettyName: "Cultura ",
-                portal: "elmundo ",
-                ct: "n ",
-                model: "default ",
-                contentId: '5bd1e93f268e3e560d8b45cf',
-                breadcrumb: '<ul class="tab-breadcrumb js-containerbreadcrumb "><li itemtype="http://data-vocabulary.org/Breadcrumb
-            " itemscope=" " class="home " itemref="bread-1 " id="bread - 0 "><a itemprop="url " title="Inicio " href="http://www.elmundo.es
-                "><span itemprop="title ">Inicio</span></a><span class="arrow "></span></li><li itemtype="http://data-vocabulary.org/Breadcrumb
-                " itemscope=" " class="first-level "  id="bread - 1 "><a itemprop="url " title="Secciones " href="https://www.elmundo.es/
-                "><span itemprop="title ">Secciones</span></a></li></ul>',
-                children: '<ul class="local-navigation "><li><span class="local-navigation-title "><a href="https://www.elmundo.es/
-            " title="Secciones ">Secciones</a></span><ul class="local-navigation - links js-breadcrumbChildren js-breadcrumb - submenu
-            "><li data-section="España "><a title="España " href="https://www.elmundo.es/espana.html?cid=MENUHOM24801
-                ">España</a></li><li data-section="Opinión "><a title="Opinión " href="https://www.elmundo.es/opinion.html?cid=MENUHOM24801&amp;sk_w=desplegable
-                ">Opinión</a></li><li data-section="Internacional "><a title="Internacional " href="https://www.elmundo.es/internacional.html?cid=MENUHOM24801
-                ">Internacional</a></li><li data-section="Economía "><a title="Economía " href="https://www.elmundo.es/economia.html?cid=MENUHOM24801
-                ">Economía</a></li><li data-section="Sociedad "><a title="Sociedad " href="https://www.elmundo.es/sociedad.html ">Sociedad</a></li><li data-section="Cultura
-                "><a title="Cultura " href="https://www.elmundo.es/cultura.html?cid=MENUHOM24801 ">Cultura</a></li><li data-section="Deportes
-                "><a title="Deportes " href="https://www.elmundo.es/deportes.html?cid=MENUHOM24801 ">Deportes</a></li><li data-section="Ciencia
-                "><a title="Ciencia " href="https://www.elmundo.es/ciencia.html?cid=MENUHOM24801 ">Ciencia</a></li><li data-section="Tecnología
-                "><a title="Tecnología " href="https://www.elmundo.es/tecnologia.html?cid=MENUHOM24801
-                ">Tecnología</a></li><li data-section="TV "><a title="TV " href="https://www.elmundo.es/television.html?cid=MENUHOM24801 ">TV</a></li></ul></li></ul>',
-                numComments: '0',
-                rrss: {
-                    img: " ",
-                    summary: " ",
-                    viaTwitter: "elmundoes "
-                }
-            }
-        </script>
 
 <div class="container ">
     <!-- ==== BEGIN DELETE NC ==== -->    <div class="ue-breaking-news-container js-ueBreakingNews "></div>
@@ -1360,7 +1326,7 @@
         <div class="titles ">
             <h1 itemprop="headline " class="js-headline ">Marín Civera y Luis Abad, "dos filósofos adelantados a su tiempo ", según Fernando Savater</h1>                
             <div class="kicker ">
-                    <h2><a href="/cultura.html "></a></h2>
+                    <h2><a href="/cultura.html ">palabra larga</a></h2>
                     {{>tooltip-trust-bottom}}
             </div>
         </div>
