--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -625,26 +625,10 @@
                         </h2>
                         
                         <ul class="lista-tools">
-                            <li>{{>tooltip-trust-bottom }}</li>
-                            <li>{{>tooltip-trust-top }}</li>
-                            <li>{{>tooltip-trust-left }}</li>
-                            <li>{{>tooltip-trust-right }}</li>
+                            <li>{{>tooltip-trust }}</li>
                         </ul>
                     </div>
                 </div>
-                <style>
-                    .news-item .titles .kicker {
-                        float: none;
-                        position: static;
-                        top: 0;
-                    }
-                    .news-item .titles .kicker h2{
-                        margin-right: 1em;
-                    }
-                    .lista-tools{
-                        display: flex;
-                    }
-                </style>
                 <div class="row content sharing-tools">
                        
                     <ul>
