--- a/src/assets/mobile.html
+++ b/src/assets/mobile.html
@@ -1326,9 +1326,9 @@
         <div class="titles ">
             <h1 itemprop="headline " class="js-headline ">Marín Civera y Luis Abad, "dos filósofos adelantados a su tiempo ", según Fernando Savater</h1>                
             <div class="kicker ">
-                    <h2><a href="/cultura.html ">texto muy largo</a></h2>
-                    <!-- <h2><a href="/cultura.html ">corto</a></h2> -->
-                    {{>tooltip-trust-bottom}}
+                    <!-- <h2><a href="/cultura.html ">texto muy largo</a></h2> -->
+                    <h2><a href="/cultura.html ">madrid</a></h2>
+                    {{>tooltip-trust}}
             </div>
         </div>
                 
